--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -16,7 +16,7 @@
         <h1 class="main-title">
           Gallery
         </h1>
-        
+        <ul class="gallery"></ul>
       </div>
     </main>
 
